--- a/Cap06/Notebooks/DSA-Python-Cap06-07-Criando um Banco de Dados no MongoDB.ipynb
+++ b/Cap06/Notebooks/DSA-Python-Cap06-07-Criando um Banco de Dados no MongoDB.ipynb
@@ -18,19 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymongo\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/fb/4a/586826433281ca285f0201235fccf63cc29a30fa78bcd72b6a34e365972d/pymongo-3.8.0-cp36-cp36m-manylinux1_x86_64.whl (416kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 419kB 260kB/s eta 0:00:01\n",
+      "\u001b[31mdistributed 1.21.8 requires msgpack, which is not installed.\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pymongo\n",
+      "Successfully installed pymongo-3.8.0\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.1.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Importamos o MongoClient para conectar nossa aplicação ao MongoDB\n",
@@ -39,47 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Estabelecemos a conexão ao Banco de Dados\n",
     "conn = MongoClient('localhost', 27017)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pymongo.mongo_client.MongoClient"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Uma única instância do MongoDB pode suportar diversos bancos de dados. \n",
-    "# Vamos criar o banco de dados cadastrodb\n",
-    "db = conn.cadastrodb"
    ]
   },
   {
@@ -90,7 +68,7 @@
     {
      "data": {
       "text/plain": [
-       "pymongo.database.Database"
+       "pymongo.mongo_client.MongoClient"
       ]
      },
      "execution_count": 5,
@@ -99,20 +77,18 @@
     }
    ],
    "source": [
-    "type(db)"
+    "type(conn)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Uma coleção é um grupo de documentos armazenados no MongoDB \n",
-    "# (relativamente parecido com o conceito de tabelas em bancos relacionais)\n",
-    "collection = db.cadastrodb"
+    "# Uma única instância do MongoDB pode suportar diversos bancos de dados. \n",
+    "# Vamos criar o banco de dados cadastrodb\n",
+    "db = conn.cadastrodb"
    ]
   },
   {
@@ -123,10 +99,41 @@
     {
      "data": {
       "text/plain": [
-       "pymongo.collection.Collection"
+       "pymongo.database.Database"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uma coleção é um grupo de documentos armazenados no MongoDB \n",
+    "# (relativamente parecido com o conceito de tabelas em bancos relacionais)\n",
+    "collection = db.cadastrodb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pymongo.collection.Collection"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,10 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import datetime"
@@ -162,10 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "post1 = {\"codigo\": \"ID-9987725\",\n",
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +188,7 @@
        "dict"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,10 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "collection = db.posts"
@@ -207,10 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "post_id = collection.insert_one(post1)"
@@ -218,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectId('5ad94235b093151c3d578f32')"
+       "ObjectId('5d2bd8d83c4eacab6b8d38e4')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x11176a448>"
+       "<pymongo.results.InsertOneResult at 0x7f9ea375ee08>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,10 +259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "post2 = {\"codigo\": \"ID-2209876\",\n",
@@ -274,10 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "collection = db.posts"
@@ -285,10 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "post_id = collection.insert_one(post2).inserted_id"
@@ -296,16 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectId('5ad94238b093151c3d578f33')"
+       "ObjectId('5d2bd9313c4eacab6b8d38e5')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,20 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5ad94238b093151c3d578f33'),\n",
+       "{'_id': ObjectId('5d2bd9313c4eacab6b8d38e5'),\n",
        " 'codigo': 'ID-2209876',\n",
-       " 'data_cadastro': datetime.datetime(2018, 4, 20, 1, 28, 23, 551000),\n",
+       " 'prod_name': 'Televisor',\n",
        " 'marcas': ['samsung', 'panasonic', 'lg'],\n",
-       " 'prod_name': 'Televisor'}"
+       " 'data_cadastro': datetime.datetime(2019, 7, 15, 1, 38, 19, 303000)}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('5ad94235b093151c3d578f32'), 'codigo': 'ID-9987725', 'prod_name': 'Geladeira', 'marcas': ['brastemp', 'consul', 'elecrolux'], 'data_cadastro': datetime.datetime(2018, 4, 20, 1, 28, 19, 198000)}\n",
-      "{'_id': ObjectId('5ad94238b093151c3d578f33'), 'codigo': 'ID-2209876', 'prod_name': 'Televisor', 'marcas': ['samsung', 'panasonic', 'lg'], 'data_cadastro': datetime.datetime(2018, 4, 20, 1, 28, 23, 551000)}\n"
+      "{'_id': ObjectId('5d2bd8d83c4eacab6b8d38e4'), 'codigo': 'ID-9987725', 'prod_name': 'Geladeira', 'marcas': ['brastemp', 'consul', 'elecrolux'], 'data_cadastro': datetime.datetime(2019, 7, 15, 1, 36, 45, 324000)}\n",
+      "{'_id': ObjectId('5d2bd9313c4eacab6b8d38e5'), 'codigo': 'ID-2209876', 'prod_name': 'Televisor', 'marcas': ['samsung', 'panasonic', 'lg'], 'data_cadastro': datetime.datetime(2019, 7, 15, 1, 38, 19, 303000)}\n"
      ]
     }
    ],
@@ -360,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +362,7 @@
        "'cadastrodb'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -390,14 +383,14 @@
        "['posts']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Listando as coleções disponíveis\n",
-    "db.collection_names()"
+    "db.list_collection_names()"
    ]
   },
   {
